Fix alignment of about section on mobile

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -54,6 +54,12 @@ section#about div#left p {
   text-align: right;
 }
 
+@media screen and (max-width: 991px) {
+  section#about div p, section#about div#left p {
+    text-align: center;
+  }
+}
+
 section#about p a {
   color: #{{ site.color.secondary-light }};
 }
